--- a/form.html
+++ b/form.html
@@ -20,15 +20,35 @@
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
 					<li class="navigation__item"><a class="navigation__link navigation__link--active" href="#">Гостиницы</a></li>
 				</ul>
-				<a class="menu-close" href="/"></a>
+				<a class="menu-close" href="/">
+					<svg class="menu-close__img" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+						xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" 
+						viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+						<polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+					</svg>
+				</a>
 			</nav>
             
 			<!--Логотип-->
 			<div class="logo">
 				<a class="logo__link" href="index.html">
-		        	<img src="img/logo.png" alt="logo">
+		        	<svg class="logo__background" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+		        		xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="137px" height="70.778px" 
+		        		viewBox="0 0 137 70.778" enable-background="new 0 0 137 70.778" xml:space="preserve"><path d="M137,0h-14.173H14.173H0l31.279,35.161l0,0l27.8,31.249c5.182,5.824,13.66,5.824,18.842,0l27.8-31.249l0,0L137,0z"/>
+					</svg>
+					<img class="logo__img" src="img/logo-sedona@1x.png" alt="logo" width="68px" height="55px">
 		    	</a>
-		    	<a class="menu-open" href="/"></a>
+		    	<a class="menu-open" href="/">
+		    		<svg class="menu-open__img" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+		    			xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" 
+		    			viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
+						<g>
+							<rect width="22.928" height="3.964"/>
+							<rect y="9.009" width="22.928" height="3.964"/>
+							<rect y="18.018" width="22.928" height="3.964"/>
+						</g>
+					</svg>
+		    	</a>
 			</div>
 		</div>
 		</header>
@@ -38,7 +58,19 @@
 			<div class="main__wrap">
 				<div class="card">
 			  		<div class="card__wrap">
-			    		<img class="card__main-logo" src="img/card__main-logo.png" alt="Sedona"></img>
+			    		<!--<img class="card__main-logo" src="img/card__main-logo.png" alt="Sedona"></img>-->
+			    		<svg class="card__main-logo card__main-logo--min" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+						xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="459.755px" height="79.804px" 
+						viewBox="0 0 459.755 79.804" enable-background="new 0 0 459.755 79.804" xml:space="preserve">
+						<g>
+						<path d="M44.468,21.737c-3.573-2.978-8.139-4.963-12.903-4.963c-3.573,0-8.338,2.084-8.338,6.253c0,4.368,5.261,6.055,8.636,7.146l4.963,1.489c10.422,3.077,18.462,8.337,18.462,20.447c0,7.445-1.787,15.088-7.742,20.15c-5.856,4.963-13.698,7.047-21.241,7.047c-9.43,0-18.661-3.176-26.304-8.537l8.338-15.682c4.864,4.268,10.621,7.742,17.271,7.742c4.566,0,9.43-2.283,9.43-7.544c0-5.46-7.643-7.345-11.812-8.536c-12.208-3.475-20.249-6.65-20.249-21.143c0-15.187,10.819-25.112,25.807-25.112c7.543,0,16.775,2.382,23.425,6.154L44.468,21.737z"/>
+						<path d="M91.833,18.958v12.506h21.936v16.478H91.833v12.902h23.127v16.478H72.378V2.481h42.582v16.477H91.833z"/>
+						<path d="M129.418,2.481h27.594c20.844,0,38.016,16.377,38.016,37.42c0,21.042-17.271,37.42-38.016,37.42h-27.594V2.481zM148.873,60.845h4.367c11.613,0,21.54-6.352,21.54-20.943c0-13.4-8.834-20.943-21.341-20.943h-4.566V60.845z"/>
+						<path d="M286.873,38.512c0,24.219-17.37,41.292-41.391,41.292s-41.391-17.072-41.391-41.292C204.091,15.881,223.943,0,245.482,0S286.873,15.881,286.873,38.512z M224.34,38.611c0,12.903,9.529,22.333,21.142,22.333s21.142-9.43,21.142-22.333c0-10.323-9.528-19.752-21.142-19.752S224.34,28.289,224.34,38.611z"/>
+						<path d="M297.239,2.481h19.455l35.634,45.758h0.198V2.481h19.454v74.841h-19.454l-35.634-45.857h-0.198v45.857h-19.455V2.481z"/>
+						<path d="M407.347,64.319l-5.161,13.003h-20.646l28.785-74.841h21.241l28.189,74.841H439.01l-4.863-13.003H407.347z M420.945,25.608h-0.199l-8.039,23.822h16.179L420.945,25.608z"/>
+						</g>
+					</svg>
 			  		</div>
 			  		<svg class="card__svg-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
 			  			xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1202px" height="57px" 
@@ -137,7 +169,7 @@
 									    </div>
 									    <div class="info-travel__item">
 									    	<label for="date-end">Дата отъезда:</label>
-		                                 	<input type="text" id="date-end" name="date-end" value="28 июля 2015"></input>
+		                                 	<input type="text" id="date-end" name="date-end" value="28 июля 2015" autofocus></input>
 									    </div>
 									</div>
 	                            </div>
@@ -254,36 +286,62 @@
 	                                </div>
 	                                <!--<input type="file" name="img" accept="image/*"></input>-->
 
-	                                 <input class="images__btn-download" type="button" for="file" value="Выбрать фотографии"></input>
+	                                <a class="images__btn-download">Выбрать фотографии</a>
+	                                <div class="images__drag-photos">Перетащите фотографии сюда</div>
+
 	                                <div class="images-block">
 	                                <div class="images-block__item">
-	                                	<a class="images-block__item--close-icon" href="#"></a>
+	                                	<a class="images-block__close-link" href="#">
+	                                		<svg class="images-block__close-link--icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+												 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve"><polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+											</svg>
+	                                	</a>
 	                                	<img src="img/image1@1x.jpg" width="70px" height="70px"></img>
 	                                	<p>IMG-689.JPG</p>
 	                                </div>
 
 	                                <div class="images-block__item">
-	                                	<a class="images-block__item--close-icon" href="#"></a>
+	                                	<a class="images-block__close-link" href="#">
+	                                		<svg class="images-block__close-link--icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+												 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve"><polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+											</svg>
+	                                	</a>
 	                                	<img src="img/image2@1x.jpg" width="70px" height="70px"></img>
 	                                	<p>IMG-687.JPG</p>
 	                                </div>
 	                                <div class="images-block__item">
-	                                	<a class="images-block__item--close-icon" href="#"></a>
+	                                	<a class="images-block__close-link" href="#">
+	                                		<svg class="images-block__close-link--icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+												 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve"><polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+											</svg>
+	                                	</a>
 	                                	<img src="img/image3@1x.jpg" width="70px" height="70px"></img>
 	                                	<p>IMG-688.JPG</p>
 	                                </div>
 	                                <div class="images-block__item">
-	                                	<a class="images-block__item--close-icon" href="#"></a>
+	                                	<a class="images-block__close-link" href="#">
+	                                		<svg class="images-block__close-link--icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+												 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve"><polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+											</svg>
+	                                	</a>
 	                                	<img src="img/image4@1x.jpg" width="70px" height="70px"></img>
 	                                	<p>IMG-689.JPG</p>
 	                                </div>
 	                                <div class="images-block__item">
-	                                	<a class="images-block__item--close-icon" href="#"></a>
+	                                	<a class="images-block__close-link" href="#">
+	                                		<svg class="images-block__close-link--icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+												 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve"><polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+											</svg>
+	                                	</a>
 	                                	<img src="img/image5@1x.jpg" width="70px" height="70px"></img>
 	                                	<p>IMG-660.JPG</p>
 	                                </div>
 	                                <div class="images-block__item">
-	                                	<a class="images-block__item--close-icon" href="#"></a>
+	                                	<a class="images-block__close-link" href="#">
+	                                		<svg class="images-block__close-link--icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+												 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve"><polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+											</svg>
+	                                	</a>
 	                                	<img src="img/image6@1x.jpg" width="70px" height="70px"></img>
 	                                	<p>IMG-691.JPG</p>
 	                                </div>
@@ -333,14 +391,15 @@
 					</a>
 				</div>
 				<div class="page-footer__item">
-					<p class="page-footer__dev">Разработано<a class="page-footer__link-copyright" href="http://htmlacademy.ru">
-						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+					<span class="page-footer__dev">Разработано</span>
+					<a class="page-footer__link-copyright" href="http://htmlacademy.ru">
+						<svg class="page-footer__svg-copyright" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 							x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" 
 							enable-background="new 0 0 26.943 34.09" xml:space="preserve">
 							<path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65
 							l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036v10.02L13.472,31.85L1.925,24.979V15.127z"/>
 						</svg>
-					</a></p>
+					</a>
 				</div>
 			</div>
 		</footer>
